--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -564,6 +564,17 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location added" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcc-OQ-ABL">
+                                <rect key="frame" x="132.66666666666669" y="373.33333333333331" width="150.00000000000006" height="50"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Oib-Ad-rLC"/>
+                                    <constraint firstAttribute="width" constant="150" id="xOK-mU-RO5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -571,6 +582,7 @@
                             <constraint firstAttribute="trailing" secondItem="vwn-rh-RNR" secondAttribute="trailing" priority="750" constant="11" id="5DF-ro-xHj"/>
                             <constraint firstItem="vwn-rh-RNR" firstAttribute="top" secondItem="vQC-z6-PgY" secondAttribute="bottom" constant="30" id="BH0-oR-Czg"/>
                             <constraint firstItem="q1N-lK-hlt" firstAttribute="centerY" secondItem="3wF-7S-Bca" secondAttribute="centerY" constant="-17" id="ERH-Ro-x8r"/>
+                            <constraint firstItem="zcc-OQ-ABL" firstAttribute="centerX" secondItem="3wF-7S-Bca" secondAttribute="centerX" id="G1b-Q6-cZh"/>
                             <constraint firstItem="enj-hS-Pnz" firstAttribute="top" secondItem="SUg-KE-NgE" secondAttribute="bottom" constant="29" id="GeQ-OT-7Qp"/>
                             <constraint firstItem="SUg-KE-NgE" firstAttribute="trailing" secondItem="ELE-i3-Sl0" secondAttribute="trailing" id="Iwe-VJ-Cxk"/>
                             <constraint firstAttribute="trailingMargin" secondItem="SUg-KE-NgE" secondAttribute="trailing" constant="10" id="KBz-pw-wpe"/>
@@ -578,6 +590,7 @@
                             <constraint firstItem="uWq-Bf-Ic6" firstAttribute="top" secondItem="3wF-7S-Bca" secondAttribute="top" id="ODF-to-eOf"/>
                             <constraint firstItem="vwn-rh-RNR" firstAttribute="centerX" secondItem="3wF-7S-Bca" secondAttribute="centerX" id="Rgc-60-PnQ"/>
                             <constraint firstItem="q1N-lK-hlt" firstAttribute="centerX" secondItem="3wF-7S-Bca" secondAttribute="centerX" id="VU0-MO-ihb"/>
+                            <constraint firstItem="zcc-OQ-ABL" firstAttribute="centerY" secondItem="3wF-7S-Bca" secondAttribute="centerY" constant="30" id="ZJU-Yr-z96"/>
                             <constraint firstItem="uWq-Bf-Ic6" firstAttribute="leading" secondItem="3wF-7S-Bca" secondAttribute="leading" id="l5F-I2-8qA"/>
                             <constraint firstItem="SUg-KE-NgE" firstAttribute="top" secondItem="ELE-i3-Sl0" secondAttribute="bottom" constant="22" id="pbK-Bo-1Db"/>
                             <constraint firstItem="enj-hS-Pnz" firstAttribute="top" secondItem="uWq-Bf-Ic6" secondAttribute="bottom" id="wLa-Ww-PiO"/>
@@ -590,6 +603,7 @@
                         <outlet property="goBackButton" destination="ELE-i3-Sl0" id="vHu-Yd-9vk"/>
                         <outlet property="leftArrowButton" destination="6jw-Wz-bOh" id="eJG-1o-bXc"/>
                         <outlet property="leftArrowButtonLeftConstraint" destination="Cd3-13-ZhD" id="9Rd-OO-Axm"/>
+                        <outlet property="locationAddedLabel" destination="zcc-OQ-ABL" id="JXE-Jm-qER"/>
                         <outlet property="locationTextField" destination="dLR-9U-ovK" id="MS5-qt-ZR8"/>
                         <outlet property="mapCenterView" destination="q1N-lK-hlt" id="ZAS-1k-hx2"/>
                         <outlet property="mapView" destination="uWq-Bf-Ic6" id="SSg-Ez-3Qb"/>
@@ -598,7 +612,47 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KhQ-TR-a8g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2804" y="840"/>
+            <point key="canvasLocation" x="2802.898550724638" y="839.67391304347836"/>
+        </scene>
+        <!--Loading Spinner View Controller-->
+        <scene sceneID="LcL-ny-F53">
+            <objects>
+                <viewController storyboardIdentifier="LoadingSpinnerViewController" id="iks-q0-GRU" customClass="LoadingSpinnerViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nDo-3B-T6b"/>
+                        <viewControllerLayoutGuide type="bottom" id="iYn-QA-LMN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qX9-X7-YYg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OAT-wU-XLe" customClass="MaterialSpinner" customModule="OnTheMap" customModuleProvider="target">
+                                <rect key="frame" x="192" y="353" width="30" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3oZ-Ao-l0U"/>
+                                    <constraint firstAttribute="width" constant="30" id="rez-s9-Gcq"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="strokeColor">
+                                        <color key="value" red="1" green="0.37647058820000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.30709363117870725" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="OAT-wU-XLe" firstAttribute="centerY" secondItem="qX9-X7-YYg" secondAttribute="centerY" id="fpa-Jt-z1k"/>
+                            <constraint firstItem="OAT-wU-XLe" firstAttribute="centerX" secondItem="qX9-X7-YYg" secondAttribute="centerX" id="zyJ-E5-XmC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="spinner" destination="OAT-wU-XLe" id="dnd-VG-Y0A"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="imY-PR-JBT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3021.739130434783" y="1511.413043478261"/>
         </scene>
         <!--Add URL View Controller-->
         <scene sceneID="fZF-sj-BbO">
@@ -640,7 +694,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="URL"/>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_pin" translatesAutoresizingMaskIntoConstraints="NO" id="dNJ-cZ-STm">
                                         <rect key="frame" x="20" y="29" width="18" height="18"/>
@@ -665,7 +719,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="5VU-zq-VPK"/>
                                 </constraints>
